# aether-linux-mcp-server

./: .cursorignore  .cursorignore.index  .editorconfig  .env.example  .gitignore  .windsurfrules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.js  install.sh  lhm.plugin.json  package.json
.agents/instructions/: CLAUDE.md
.agents/skills/aether-linux-mcp/: SKILL.md
.cargo/: config.toml
.cursor/rules/: aether-mcp.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/community/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  rust.yml
docs/: DEVELOPMENT.md  INSTALL.md  MCP_CLIENTS.md  PROJECT_STRUCTURE.md  README.md  RELEASE.md  SECURITY_MODEL.md  TOOLS.md
scripts/: README.md  mock_matrix.py  smoke_stdio.py
scripts/install/: install.js  install.sh
src/: README.md  actions.rs  audit.rs  config.rs  error.rs  lib.rs  main.rs  server.rs
src/tools/: README.md  automation.rs  filesystem.rs  gui.rs  hardware.rs  helpers.rs  mod.rs  network.rs  packages.rs  process.rs  security.rs  service.rs  sysconfig.rs  sysinfo.rs  user.rs
tests/: README.md  action_spec_tests.rs  config_tests.rs  error_tests.rs  integration_tests.rs  mock_action_tests.rs  tool_dispatch_tests.rs
